# bump

./: BUILD  MODULE.bazel  README.md  go.mod  go.sum  main.go
cmd/: BUILD.bazel  common.go  root.go
pkg/git/: BUILD.bazel
pkg/semver/: BUILD.bazel  semver.go
