module(
    name = "bump",
    repo_name = "code.ndumas.com_ndumas_bump",
)

bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.44.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_go_git_go_git_v5", "com_github_manifoldco_promptui", "com_github_masterminds_semver_v3", "com_github_spf13_cobra", "org_uber_go_zap")
