load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "git",
    srcs = ["git.go"],
    importpath = "github.com/therealfakemoot/bump/pkg/git",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/object",
    ],
)
