load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "semver",
    srcs = ["semver.go"],
    importpath = "github.com/therealfakemoot/bump/pkg/semver",
    visibility = ["//visibility:public"],
    deps = ["@com_github_masterminds_semver_v3//:semver"],
)

go_test(
    name = "semver_test",
    srcs = ["semver_test.go"],
    embed = [":semver"],
)
